--- a/markdeep-slides-theme-vollkorn.css
+++ b/markdeep-slides-theme-vollkorn.css
@@ -4,6 +4,12 @@ body {
     font-family: Vollkorn;
 }
 
+.slide-progress {
+    display: block;
+    height: 0.1rem;
+    background-color: black;
+}
+
 .md div.title {
     font-family: "Vollkorn SC";
     float: left;
