--- a/markdeep-slides-theme-vollkorn.css
+++ b/markdeep-slides-theme-vollkorn.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Vollkorn+SC:600|Vollkorn:400,400i,700,700i,900&display=swap');
 
+:root {
+    --slide-number-color: #000;
+}
+
 body {
     font-family: Vollkorn;
 }
@@ -61,7 +65,6 @@ hr {
 
 .fancyquote {
     font-size: 1.25rem;
-    display: none;
 }
 .md blockquote.fancyquote::before,
 .md span.fancyquote::after {
