Improve demo presentation and README.md

--- a/markdeep-slides-theme-serif.css
+++ b/markdeep-slides-theme-serif.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Vollkorn+SC:600|Vollkorn:400,400i,700,700i,900|Fira+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Vollkorn+SC:600|Vollkorn:400,400i,700,700i|Fira+Mono&display=swap');
 
 :root {
     --text-color: black;
