--- a/markdeep-slides/markdeep-slides.css
+++ b/markdeep-slides/markdeep-slides.css
@@ -127,6 +127,38 @@ body {
     display: none;  /* will be shown in separate window */
 }
 
+html.presenter-notes {
+    font-size: 3vw;
+}
+.presenter-notes body {
+    margin: 0;
+    background-image: linear-gradient(#222, #111);
+    min-height: 100%;
+    color: white;
+}
+.presenter-notes-meta {
+    font-family: sans-serif;
+    font-size: 1.75rem;
+    background-color: #000;
+    padding: 0.2em 1rem 0.2em;
+    line-height: 1em;
+}
+.presenter-notes-meta #time {
+    float: left;
+}
+.presenter-notes-meta #time .seconds {
+    opacity: 0.5;
+}
+.presenter-notes-meta #slide-number {
+    float: right;
+}
+.presenter-notes-meta #slide-number .current {
+    font-weight: bold;
+}
+.presenter-notes-notes {
+    margin: 1rem;
+}
+
 #black {
     position: fixed;
     z-index: 9001;
