Style total slide number in deepsea theme

--- a/markdeep-slides/markdeep-slides.css
+++ b/markdeep-slides/markdeep-slides.css
@@ -94,7 +94,7 @@ body {
     width: 2rem;
     text-align: right;
 }
-.slide-number .slide-number-total {
+.slide-number-total {
     display: var(--total-slide-number-display);
 }
 
