Add iframe-based way of showing a preview/thumbnail of the current slide in the presenter notes window, with a bunch of caveats (hence not on master):
* Works well in Firefox,
* works okay in Safari – as long as you don't resize the window and aren't using non-ASCII symbols or math on your slides,
* doesn't work in Chrome (the iframe stays blank even though it contains the correct elements),
* only works properly when the presenter notes window is opened after the main page has completely finished rendering (including math).

If this was to be merged into master, some improvements would be in order:

* Make it work in all browsers,
* make it work properly even if the presenter notes window is opened a bit too early,
* deal with autoplaying videos and related troublemakers,
* add some sort of faux mouse pointer that would move in the main slides window in accordance with the real mouse pointer if it's over the slide preview (Présentation does this well), maybe with the ability to draw stuff on top of the slide,
* show the previous and next slide as well, maybe smaller and with lower opacity.

--- a/markdeep-slides/markdeep-slides.css
+++ b/markdeep-slides/markdeep-slides.css
@@ -181,6 +181,13 @@ html.presenter-notes {
 .presenter-notes-notes {
     margin: 1rem;
 }
+.presenter-notes iframe {
+    background-color: white;
+    border: none;
+    width: 35%;
+    float: right;
+    pointer-events: none;  /* keep it from capturing focus */
+}
 
 #black {
     position: fixed;
